[project]
name = "telegraf_mobilealerts"
description = "Telegraf execd input plugin for MobileAlerts weather sensors "
version = "1.0.0"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "tomlconfig @ git+https://github.com/JurajMarcin/tomlconfig.git@1.1.2",
    "aiohttp >= 3.8.3",
    "mobilealerts @ git+https://github.com/JurajMarcin/python-mobilealerts.git@a80336917d5e8d4e92313a6b1ece7e9314d98547",
]

[project.scripts]
telegrafmobilealerts = "telegraf_mobilealerts:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["telegraf_mobilealerts"]
